tests/compile-fail/fail4.stderr
error[E0310]: the parameter type `T` may not live long enough
 --> $DIR/fail4.rs:5:11
  |
5 |     union U<T>: Debug where T: Debug+Copy = T;
  |           ^^-^
  |           | |
  |           | help: consider adding an explicit lifetime bound...: `T: 'static`
  |           ...so that the type `T` will meet its required lifetime bounds
